[tool.poetry]
name = "streamlit-cookies-manager-ext"
version = "0.1.0"
description = "Access and save cookies from Streamlit"
authors = ["Tomasz Kontusz <tomasz.kontusz@gmail.com>"]
license = "Apache-2.0"

readme = "README.md"

include = [
    "streamlit_cookies_manager_ext/build/**/*",
]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = ">=1.37.0"
cryptography = "44.0.1"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
